deploy/base/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: szuflada
  labels:
    app: szuflada
spec:
  selector:
    app: szuflada
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szuflada
  labels:
    app.kubernetes.io/name: szuflada
spec:
  selector:
    matchLabels:
      app: szuflada
  replicas: 3
  template:
    metadata:
      labels:
        app: szuflada
    spec:
      securityContext:
       runAsUser: 1000
      containers:
      - name: szuflada
        image: harbor.k8s.lan/sprawunki/szuflada
        ports:
        - name: http
          containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
      imagePullSecrets:
      - name: regcred
      terminationGracePeriodSeconds: 10
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: szuflada
